--- a/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/006_common_oidc-authservice_base.yaml
+++ b/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/006_common_oidc-authservice_base.yaml
@@ -65,7 +65,7 @@ spec:
         - configMapRef:
             name: oidc-authservice-parameters
         image: gcr.io/arrikto/kubeflow/oidc-authservice:28c59ef
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: authservice
         ports:
         - containerPort: 8080
