修改未修改的错误镜像源
Signed-off-by: chenguanming <2554550408@qq.com>

--- a/images/knative-releases/knative.dev/net-istio/cmd/controller-sha256/Dockerfile
+++ b/images/knative-releases/knative.dev/net-istio/cmd/controller-sha256/Dockerfile
@@ -1,1 +1,1 @@
-FROM gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
+FROM gcr.io/knative-releases/knative.dev/net-istio/cmd/controller:sha256-f253b82941c2
