修改被放弃的版本号
Signed-off-by: chenguanming <2554550408@qq.com>

--- a/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/008_common_knative_knative-serving_overlays_gateways.yaml
+++ b/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/008_common_knative_knative-serving_overlays_gateways.yaml
@@ -6985,7 +6985,7 @@ spec:
     matchLabels:
       app: webhook
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   labels:
@@ -7010,7 +7010,7 @@ spec:
     kind: Deployment
     name: activator
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   labels:
