--- a/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/014_apps_pipeline_upstream_env_cert-manager_platform-agnostic-multi-user.yaml
+++ b/get-kf-images/002-半自动匹配方式/kf-ex-files-modify/014_apps_pipeline_upstream_env_cert-manager_platform-agnostic-multi-user.yaml
@@ -3744,7 +3744,7 @@ spec:
         - name: NAMESPACE_TO_WATCH
           value: ""
         image: gcr.io/ml-pipeline/cache-server:2.0.0-alpha.5
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: server
         ports:
         - containerPort: 8443
@@ -4399,7 +4399,7 @@ spec:
             fieldRef:
               fieldPath: metadata.namespace
         image: gcr.io/ml-pipeline/viewer-crd-controller:2.0.0-alpha.5
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: ml-pipeline-viewer-crd
       serviceAccountName: ml-pipeline-viewer-crd-service-account
 ---
